refactored EmailService into a split of CommunicationService (contact syncs) and EmailService (email conduit only) + MBT's imple